Updated pictures to new programmer

--- a/step_3.html
+++ b/step_3.html
@@ -166,7 +166,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div class=ribbon>
-<a href="https://github.com/stsb11/pic_programmer">Fork me on GitHub</a>
+<a href="https://github.com/stcd11/pic_programmer">Fork me on GitHub</a>
 </div>
 
 <div id="outline-container-sec-1" class="outline-2 activity">
@@ -224,13 +224,9 @@ By this point, you should have a fully soldered together PCB (with a chip), a do
 </p>
 </div>
 <ul class="org-ul">
-<li><p>
-You can now plug your Genie cable into the download socket. If you've done everything correctly, the right-hand side of the Circuit Wizard should now show you a "Connected GENIE C08" message, and the bottom-left LED should blink continously as data is exchanged between the PC and your circuit. Congratulations! 
-</p>
+<li>You can now plug your Genie cable into the download socket. If you've done everything correctly, the right-hand side of the Circuit Wizard should now show you a "Connected GENIE C08" message, and the bottom-left LED should blink continously as data is exchanged between the PC and your circuit. Congratulations! 
 </li>
-<li><p>
-If it hasn't come up as connected, there are a few reasons this could be:
-</p>
+<li>If it hasn't come up as connected, there are a few reasons this could be:
 <ul class="org-ul">
 <li>Check with a multimeter that there is 3V across pins 1 and 8.
 </li>
