--- a/step_1.html
+++ b/step_1.html
@@ -213,10 +213,10 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div class=ribbon>
-<a href="https://github.com/stsb11/pic_programmer">Fork me on GitHub</a>
+<a href="https://github.com/stcd11/pic_programmer">Fork me on GitHub</a>
 </div>
 <center>
-<img src='img/pic4.jpg' width=33%>
+<img src='img/pic5.jpg' width=33%>
 </center>
 
 <div id="outline-container-sec-1" class="outline-2 activity">
@@ -242,7 +242,11 @@ for the JavaScript code in this tag.
 </li>
 <li>Outputs are placed to the right of the PIC chip. In the project you're making, you'll actually use 3 LEDs, connected to the other output pins. For now, we can just leave outputs 2 and 4 empty.
 </li>
-<li>One of great things about the Genie C08 PIC is that you can change the configuration of the pins; with this particular project, we'll be using pins 0, 1 and 2 for outputs, and pin 4 for our input. This is because when the PCB was designed, using this arrangement allowed us to make the PCB smaller with this setup. 
+<li>One of great things about the Genie 08 PIC is that you can change the configuration of the pins; this will allow users to re-configure the PIC different projects.
+</li>
+<li>Below is how you would go about doing this.
+</li>
+<li><b>In this project, we are not going to change these settings.</b> 
 </li>
 </ul>
 
@@ -251,17 +255,6 @@ for the JavaScript code in this tag.
 </p>
 </div>
 <ul class="org-ul">
-<li>To change the configuration, start by <b>right-clicking</b> on the Genie chip in Circuit Wizard. From the menu that appears, then choose <b>Program</b> and then <b>Program settings</b>. 
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="./img/changepins.png" alt="changepins.png" />
-</p>
-</div>
-<ul class="org-ul">
-<li>At the bottom of the window that appears, click the drop-down list, and choose the option that says, "<b>2 inputs, 3 outputs (G0-G2)</b>". Now click "Ok". 
-</li>
 <li>Try and run the circuit. You'll see an error message, and the screen will change to show you a green flowchart symbol with the word, "Start" in it. This is because the PIC chip needs you to give it instructions as to what you'd like it to do. Using shapes located on the right-hand side of the screen and experimenting with clicking near the shapes you've drawn, create the following flowchart. We're going to make the LED blink on and off.
 </li>
 </ul>
@@ -306,7 +299,7 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-2">Coding time</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
-<li>Try and modify your program and answer the questions below on a Word document. You'll be saving this circuit in your home drive later.
+<li>Try and modify your program and answer the questions below on a text document (.txt). You'll be saving this circuit in your home drive later.
 </li>
 <li>Make the LED blink on and off twice as quickly.
 </li>
@@ -398,7 +391,7 @@ for the JavaScript code in this tag.
 </li>
 <li>Modify your circuit diagram, by swapping the PTM switch for an LDR (found in the Sensors section of Input Components in Circuit Wizard).
 </li>
-<li><span class="underline"><b>NOTE:</b></span> The LDR is connected to input 4. This is because an LDR is an analogue component, so needs to be connected to an input that can accept it (notice the /A after G4 in the picture below). 
+<li><span class="underline"><b>NOTE:</b></span> The LDR is connected to input 6. This is because an LDR is an analogue component, so needs to be connected to an input that can accept it (notice the /A after G1 in the picture below). 
 </li>
 </ul>
 
@@ -500,7 +493,7 @@ Create a text document and answer the following questions:
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
+<p class="validation"></p>
 </div>
 </body>
 </html>
