--- a/step_2.html
+++ b/step_2.html
@@ -147,19 +147,9 @@ for the JavaScript code in this tag.
 <li><a href="#sec-1-1">Build It</a></li>
 </ul>
 </li>
-<li><a href="#sec-2">2. Download socket</a>
+<li><a href="#sec-2">2. Assessment Point</a>
 <ul>
-<li><a href="#sec-2-1">Build It</a></li>
-</ul>
-</li>
-<li><a href="#sec-3">3. Power cable</a>
-<ul>
-<li><a href="#sec-3-1">Build It</a></li>
-</ul>
-</li>
-<li><a href="#sec-4">4. Assessment Point</a>
-<ul>
-<li><a href="#sec-4-1">Badge It</a></li>
+<li><a href="#sec-2-1">Badge It</a></li>
 </ul>
 </li>
 </ul>
@@ -231,93 +221,14 @@ In the last lesson, you looked at the theory of how the circuit works, and wrote
 </div>
 </div>
 <div id="outline-container-sec-2" class="outline-2 activity">
-<h2 id="sec-2"><span class="section-number-2">2</span> Download socket</h2>
+<h2 id="sec-2"><span class="section-number-2">2</span> Assessment Point</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-sec-2-1" class="outline-3 build">
-<h3 id="sec-2-1">Build It</h3>
+<div id="outline-container-sec-2-1" class="outline-3 badge">
+<h3 id="sec-2-1">Badge It</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>To program the PIC chip with your flowchart, we need to make up a connector to allow us to plug it into a PCB.
-</li>
-<li>To do this, we'll need&#x2026; 
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/dl_parts.jpg" alt="dl_parts.jpg" />
-</p>
-</div>
-<ul class="org-ul">
-<li>1x 3.5mm stereo jack (as seen in mp3 player and 'phone headphone sockets),
-</li>
-<li>1x 22k resistor, and
-</li>
-<li>3x female header plugs (any colours, but ideally all different).
-</li>
-<li>Using the image below, identify the 0V and Status output pins on the bottom of the socket, and solder one of your female header plugs to each one.
-</li>
-<li>Next, solder one end of a 22k resistor to the remaining socket (Programming Input), and solder a header plug to the other end. 
-</li>
-<li>Optionally, push the three header pins onto the PCB in the correct order (shown in the picture), and use a small strip of selotape to bond them together for more convenience later on. 
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/dl_cable.jpg" alt="dl_cable.jpg" />
-</p>
-</div>
-</div>
-</div>
-</div>
-<div id="outline-container-sec-3" class="outline-2 activity">
-<h2 id="sec-3"><span class="section-number-2">3</span> Power cable</h2>
-<div class="outline-text-2" id="text-3">
-</div>
-<div id="outline-container-sec-3-1" class="outline-3 build">
-<h3 id="sec-3-1">Build It</h3>
-<div class="outline-text-3" id="text-3-1">
-<ul class="org-ul">
-<li>We'll need a way to power this circuit. It only needs 3V to operate, which we can take from either 2x AA (or AAA) batteries, or from a desktop DC power supply. We'll need to make sure we can make a clean connection without ny risk of electrical shorting, so we'll use a couple more female headers.
-</li>
-<li>To make a battery pack connector, you'll need&#x2026; 
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/pwr_part.jpg" alt="pwr_part.jpg" />
-</p>
-</div>
-<ul class="org-ul">
-<li>2 female header plugs, with one end stripped,
-</li>
-<li>1x twin AA or AAA battery holder,
-</li>
-<li>1x 1" piece of heat-shrink tubing (cut it in half to give two smaller pieces).
-</li>
-<li>Shorten the wire ends of both the headers and the battery box, and strip all the wire ends.
-</li>
-<li>then place a piece of heatshrink
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/pwr_done.jpg" alt="pwr_done.jpg" />
-</p>
-</div>
-</div>
-</div>
-</div>
-
-<div id="outline-container-sec-4" class="outline-2 activity">
-<h2 id="sec-4"><span class="section-number-2">4</span> Assessment Point</h2>
-<div class="outline-text-2" id="text-4">
-</div>
-<div id="outline-container-sec-4-1" class="outline-3 badge">
-<h3 id="sec-4-1">Badge It</h3>
-<div class="outline-text-3" id="text-4-1">
-<ul class="org-ul">
-<li>Take pictures of the following, for inclusion in your portfolio: PCB (front), PCB (back), Download cable and power cable.
+<li>Take pictures of the following, for inclusion in your portfolio: PCB (front), PCB (back).
 </li>
 <li>Upload your photos and then create a text document describing your soldering technique, briefly stating what you feel is good about your work, and identifying something you'd like to improve. Upload the text document.
 </li>
@@ -330,7 +241,7 @@ In the last lesson, you looked at the theory of how the circuit works, and wrote
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
+<p class="validation"></p>
 </div>
 </body>
 </html>
