--- a/index.html
+++ b/index.html
@@ -176,13 +176,18 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-7" class="outline-2 activity">
-<h2 id="sec-7"><a href="assess.html">Assessment</a></h2>
+<h2 id="sec-7"><a href="evaluation.html">Lesson 7 - Evaluation</a></h2>
 <div class="outline-text-2" id="text-7">
 </div>
 </div>
 <div id="outline-container-sec-8" class="outline-2 activity">
-<h2 id="sec-8"><a href="homework.html">Homework Tasks</a></h2>
+<h2 id="sec-8"><a href="assess.html">Assessment</a></h2>
 <div class="outline-text-2" id="text-8">
+</div>
+</div>
+<div id="outline-container-sec-9" class="outline-2 activity">
+<h2 id="sec-9"><a href="homework.html">Homework Tasks</a></h2>
+<div class="outline-text-2" id="text-9">
 </div>
 </div>
 </div>
