Added progress ladders to badges

--- a/step_1.html
+++ b/step_1.html
@@ -204,7 +204,7 @@ for the JavaScript code in this tag.
 <li><a href="#sec-3-4">Try It</a></li>
 </ul>
 </li>
-<li><a href="#sec-4">4. Badge It</a>
+<li><a href="#sec-4">4. Badge It Platinum</a>
 <ul>
 <li><a href="#sec-4-1">Assessment Task</a></li>
 </ul>
@@ -365,7 +365,7 @@ for the JavaScript code in this tag.
 </li>
 <li>Write a program that makes each of the LEDs come on for 2s at a time while the button is held down. When released, they should all turn off.
 </li>
-<li>You can turn on multiple LEDs at once. Modify the code so that when the button is pushed, they simulate a set of <a href="http://www.drivingtesttips.biz/traffic-lights-sequence.html">traffic lights</a> (make then change once every 2s). Save this as "PIC-traffic.cwz".
+<li>This is the <b>Silver badge - Progress ladder, Yellow - With assistance, write a simple program to manipulate outputs.</b> You can turn on multiple LEDs at once. Modify the code so that when the button is pushed, they simulate a set of <a href="http://www.drivingtesttips.biz/traffic-lights-sequence.html">traffic lights</a> (make then change once every 2s). Save this as "PIC-traffic.cwz".
 </li>
 <li>Congratulations! This program (or any of the others you've made) could be put straight onto the circuit you're going to make in your practical sessions.
 </li>
@@ -445,6 +445,8 @@ Save your work as "Analogue PIC.cwz".
 </li>
 <li>Test your program when finished, and see how changing the light level affects how many LEDs are turned on.
 </li>
+<li>This is the <b>Gold Badge - Progress ladder, Green - With assistance, write programs to handle inputs in a PIC circuit.</b>
+</li>
 </ul>
 </div>
 </div>
@@ -466,7 +468,7 @@ Save your work as "Analogue PIC.cwz".
 </div>
 
 <div id="outline-container-sec-4" class="outline-2 activity">
-<h2 id="sec-4"><span class="section-number-2">4</span> Badge It</h2>
+<h2 id="sec-4"><span class="section-number-2">4</span> Badge It Platinum</h2>
 <div class="outline-text-2" id="text-4">
 </div>
 <div id="outline-container-sec-4-1" class="outline-3 design">
@@ -476,6 +478,8 @@ Save your work as "Analogue PIC.cwz".
 Create a text document and answer the following questions:
 </p>
 <ul class="org-ul">
+<li><b>Progress ladder Blue - Independently discuss PIC circuits and how they handle both digital and analogue data.</b>
+</li>
 <li>What are the advantages of using PIC chips over traditional circuit design?
 </li>
 <li>Giving examples, explain the difference between analogue and digital input components.
