--- a/step_2.html
+++ b/step_2.html
@@ -230,6 +230,12 @@ In the last lesson, you looked at the theory of how the circuit works, and wrote
 </li>
 <li>Upload your photos and then create a text document describing your soldering technique, briefly stating what you feel is good about your work, and identifying something you'd like to improve. Upload the text document.
 </li>
+<li><b>Silver Badge</b> - Progress ladder, Yellow - Identify and solder simple components (e.g. resistors) to PCBs, with assistance.
+</li>
+<li><b>Gold Badge</b> - Progress ladder, Green - Solder more challenging components (e.g. ICs) to a PCB, with assistance.
+</li>
+<li><b>Platinum badge</b> - Progress ladder, Blue - Confidently and consistently solder components to a high standard.
+</li>
 </ul>
 <p>
 <a href="index.html">Return to homepage</a>
