--- a/step_4.html
+++ b/step_4.html
@@ -230,9 +230,13 @@ We've now got a working PCB that we can write software for. In this stage, we'll
 <h3 id="sec-3-1">Assessment Point</h3>
 <div class="outline-text-3" id="text-3-1">
 <ul class="org-ul">
-<li>On your portfolio, add screenshots of your working analogue program, and write a few sentences describing how you modified your program, and the steps you took to ensure it worked correctly.
+<li>Take screenshots of your working analogue program, and write a few sentences describing how you modified your program, and the steps you took to ensure it worked correctly in a text document. Upload these pictures and the text document.
 </li>
-<li>For the platinum task, write the same analogue program in GenieBasic. A video tutorial is available on the open drive on how to do this. Click the link <i>here</i> to go to the video. 
+<li>For the platinum task, write the same analogue program in GenieBasic. A video tutorial is available on the open drive on how to do this. Click the link <i>here</i> to go to the file with the video. 
+</li>
+<li><b>Gold Badge</b> - Progress ladder, Blue - Test programs both in simulations and live, adapting code to compensate for any differences as needed.
+</li>
+<li><b>Platinum Badge</b> - Progress ladder, Violet - Use a text-based language to write a short PIC program.
 </li>
 </ul>
 <p>
@@ -243,7 +247,7 @@ We've now got a working PCB that we can write software for. In this stage, we'll
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
+<p class="validation"></p>
 </div>
 </body>
 </html>
