--- a/step_5.html
+++ b/step_5.html
@@ -209,11 +209,17 @@ Program your PCB, so that it&#x2026;
 <h3 id="sec-2-1">Assessment Point</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>On your portfolio, add (cropped) screenshots of your working programs, and write a few sentences describing how it works.
+<li>Take (cropped) screenshots of your individual working programs, and write a few sentences describing how it works in a text document. Upload each picture and text document seperately.
 </li>
 <li>On your customised program, explain the scenario briefly, and explain how the code works.
 </li>
-<li>You can now put your favourite program on it, and take your PCB home. Well done! 
+<li>You can now put your favourite program on it, and take your PCB home. Well done!
+</li>
+<li><b>Silver badge</b> (First 3 programs)- Progress ladder, Green - With assistance, write programs to handle inputs in a PIC circuit
+</li>
+<li><b>Gold Badge</b> (Next 2 programs)- Progress ladder, Blue - Independently write PIC programs which handle both digital and analogue data.
+</li>
+<li><b>Platinum Badge</b> (Final 2 programs) - Progress ladder, Violet - Invent and refine appropriate PIC programs independently. 
 </li>
 </ul>
 <p>
