--- a/step_3.html
+++ b/step_3.html
@@ -157,9 +157,9 @@ for the JavaScript code in this tag.
 <li><a href="#sec-3-1">Test it</a></li>
 </ul>
 </li>
-<li><a href="#sec-4">4. Assessment Point</a>
+<li><a href="#sec-4">4. Self assessment Point</a>
 <ul>
-<li><a href="#sec-4-1">Badge It</a></li>
+<li><a href="#sec-4-1">Assess your progress</a></li>
 </ul>
 </li>
 </ul>
@@ -279,16 +279,18 @@ By this point, you should have a fully soldered together PCB (with a chip), a do
 </div>
 </div>
 <div id="outline-container-sec-4" class="outline-2 activity">
-<h2 id="sec-4"><span class="section-number-2">4</span> Assessment Point</h2>
+<h2 id="sec-4"><span class="section-number-2">4</span> Self assessment Point</h2>
 <div class="outline-text-2" id="text-4">
 </div>
 <div id="outline-container-sec-4-1" class="outline-3 badge">
-<h3 id="sec-4-1">Badge It</h3>
+<h3 id="sec-4-1">Assess your progress</h3>
 <div class="outline-text-3" id="text-4-1">
 <ul class="org-ul">
 <li>On your portfolio, add screenshots of both your Analogue sensor under light and dark conditions.
 </li>
 <li>Take a picture of your PCB connected to your computer. Try and take one while the status LED (the left-hand one) is illuminated.
+</li>
+<li><b>This is not a badge task to be uploaded to www.bournetolearn.com.</b> 
 </li>
 </ul>
 <p>
