--- a/step_6.html
+++ b/step_6.html
@@ -147,6 +147,7 @@ for the JavaScript code in this tag.
 <li><a href="#sec-1-1">Part 1</a></li>
 <li><a href="#sec-1-2">Part 2</a></li>
 <li><a href="#sec-1-3">Autotrace</a></li>
+<li><a href="#sec-1-4">Badge It</a></li>
 </ul>
 </li>
 </ul>
@@ -168,7 +169,6 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 </div>
-
 <div id="outline-container-sec-1-1" class="outline-3 code">
 <h3 id="sec-1-1">Part 1</h3>
 <div class="outline-text-3" id="text-1-1">
@@ -214,6 +214,19 @@ for the JavaScript code in this tag.
 </ul>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/e54Kv9vir3w" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+</div>
+</div>
+<div id="outline-container-sec-1-4" class="outline-3 badge">
+<h3 id="sec-1-4">Badge It</h3>
+<div class="outline-text-3" id="text-1-4">
+<ul class="org-ul">
+<li>Silver - Progress ladder, Yellow - Use a CAD package to draw shapes accurately to specified dimensions.
+</li>
+<li>Gold - Progress ladder, Green - Demontrate the use of a 2D and 3D design package within a project.
+</li>
+<li>Platinum - Progress ladder, Blue - Create multiple connecting parts using a CAD package.
+</li>
+</ul>
 </div>
 </div>
 </div>
