--- a/Homework.html
+++ b/Homework.html
@@ -195,15 +195,20 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-3">Homework 3</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
-<li>Draw the flowchart symbol for a 'decision' and describe the difference between an <b>analogue</b> input and a <b>digital</b> input.
+<li>We use analogue and digital components in projects. The PIC Licence contains one digital input and one analogue input. An input component is any part that allows us to send information IN to the circuit. A switch detects a user's finger pushing it, for instance. 
 </li>
-<li>Name 3 input components.
+<li>The PIC licence uses three LEDs as outputs. An output is a component which the circuit can switch on and off, like an LED
+<ol class="org-ol">
+<li>Describe the difference between an analogue input and a digital input.
 </li>
-<li>Name 3 output components.
+<li>A switch in an input component. Name three other input components.
 </li>
-<li>Take a photograph of your work and upload it to <a href="https://www.bournetolearn.com">www.bournetolearn.com</a> homework 3 badge.
+<li>An LED is an output component. Name three other output components.
+</li>
+</ol>
 </li>
 </ul>
+
 
 
 
