Added coding video

--- a/step_5.html
+++ b/step_5.html
@@ -189,6 +189,7 @@ Program your PCB, so that it&#x2026;
 <li>is a toothbrush timer. When triggered by someone passing their hand over the LDR, use the LEDs to indicate to a child when two minutes have elapsed, to help them brush their teeth thoroughly.
 </li>
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/snnVIR0IcOk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
 <div id="outline-container-sec-1-2" class="outline-3 try">
