Added Genie Basic video

--- a/step_4.html
+++ b/step_4.html
@@ -239,6 +239,7 @@ We've now got a working PCB that we can write software for. In this stage, we'll
 <li><b>Platinum Badge</b> - Progress ladder, Violet - Use a text-based language to write a short PIC program.
 </li>
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dzous3M1uT4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>
 <a href="index.html">Return to homepage</a>
 </p>
