--- a/step_1.html
+++ b/step_1.html
@@ -184,29 +184,17 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#sec-1">1. Getting started with PIC circuit design.</a>
+<li><a href="#sec-1">1. Introduction.</a>
 <ul>
-<li><a href="#sec-1-1">Design time</a></li>
-<li><a href="#sec-1-2">Coding time</a></li>
+<li><a href="#sec-1-1">What are PIC chips?</a></li>
+<li><a href="#sec-1-2">When would I use a PIC chip?</a></li>
 </ul>
 </li>
-<li><a href="#sec-2">2. Adding Inputs</a>
+<li><a href="#sec-2">2. Getting started with PIC circuit design.</a>
 <ul>
 <li><a href="#sec-2-1">Design time</a></li>
 <li><a href="#sec-2-2">Coding time</a></li>
-</ul>
-</li>
-<li><a href="#sec-3">3. Digital Vs. Analogue</a>
-<ul>
-<li><a href="#sec-3-1">Design time</a></li>
-<li><a href="#sec-3-2">Save It</a></li>
-<li><a href="#sec-3-3">Code It</a></li>
-<li><a href="#sec-3-4">Try It</a></li>
-</ul>
-</li>
-<li><a href="#sec-4">4. Badge It Platinum</a>
-<ul>
-<li><a href="#sec-4-1">Assessment Task</a></li>
+<li><a href="#sec-2-3">Quiz Time</a></li>
 </ul>
 </li>
 </ul>
@@ -220,14 +208,45 @@ for the JavaScript code in this tag.
 </center>
 
 <div id="outline-container-sec-1" class="outline-2 activity">
-<h2 id="sec-1"><span class="section-number-2">1</span> Getting started with PIC circuit design.</h2>
+<h2 id="sec-1"><span class="section-number-2">1</span> Introduction.</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-sec-1-1" class="outline-3 design">
-<h3 id="sec-1-1">Design time</h3>
+<div id="outline-container-sec-1-1" class="outline-3 research">
+<h3 id="sec-1-1">What are PIC chips?</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+Peripheral Interface Controllers are small silicon chips which can be programmed to perform useful tasks.
+In school, we tend to use Genie branded chips, like the G08 model you will use in this project. Others (e.g. PICAXE) are available.
+PIC chips allow you connect different inputs (e.g. switches) and outputs (e.g. LEDs, motors and speakers), and to control them using flowcharts.
+Chips such as these can be found everywhere in consumer electronic products, from toasters to cars. 
+</p>
+
+<p>
+While they might not look like much, there is more computational power in a single PIC chip used in school than there was in the space shuttle that went to the moon in the 60's!
+</p>
+</div>
+</div>
+<div id="outline-container-sec-1-2" class="outline-3">
+<h3 id="sec-1-2">When would I use a PIC chip?</h3>
+<div class="outline-text-3" id="text-1-2">
+<p>
+Imagine you wanted to make a flashing bike light; using an LED and a switch alone, you'd need to manually push and release the button to get the flashing effect. A PIC chip could be programmed to turn the LED off and on once a second.
+In a board game, you might want to have an electronic dice to roll numbers from 1 to 6 for you. 
+In a car, a circuit is needed to ensure that the airbags only deploy when there is a sudden change in speed, AND the passenger is wearing their seatbelt, AND the front or rear bumper has been struck. PIC chips can carry out their instructions very quickly, performing around 1000 instructions per second - as such, they can react far more quickly than a person can. 
+</p>
+</div>
+</div>
+</div>
+
+<div id="outline-container-sec-2" class="outline-2 activity">
+<h2 id="sec-2"><span class="section-number-2">2</span> Getting started with PIC circuit design.</h2>
+<div class="outline-text-2" id="text-2">
+</div>
+<div id="outline-container-sec-2-1" class="outline-3 design">
+<h3 id="sec-2-1">Design time</h3>
+<div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>Open up Circuit Wizard, and create the following circuit layout. The Genie C08 chip can be found in the "Microcontrollers" drop-down menu item.
+<li>Open up Circuit Wizard, and create the following circuit layout. The Genie G08 chip can be found in the "Microcontrollers" drop-down menu item.
 </li>
 </ul>
 
@@ -295,9 +314,9 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-sec-1-2" class="outline-3 run">
-<h3 id="sec-1-2">Coding time</h3>
-<div class="outline-text-3" id="text-1-2">
+<div id="outline-container-sec-2-2" class="outline-3 run">
+<h3 id="sec-2-2">Coding time</h3>
+<div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>Try and modify your program and answer the questions below on a text document (.txt). You'll be saving this circuit in your home drive later.
 </li>
@@ -309,188 +328,21 @@ for the JavaScript code in this tag.
 </li>
 <li>Modify your program so that the LED comes on for 3s ONCE, then blinks steadily on and off once a second until the program is stopped.
 </li>
-<li>Save your file as FirstPIC.cwz in your Systems and Control\pic\ folder, then save it again straight away as SecondPic.cwz, so that you can make the next set of changes and still have a backup.
+<li>Save your file as FirstPIC.cwz in your Design Engineering\Year8\PIC folder, then save it again straight away as SecondPic.cwz, so that you can make the next set of changes and still have a backup.
 </li>
 </ul>
-</div>
 </div>
 </div>
 
-<div id="outline-container-sec-2" class="outline-2 activity">
-<h2 id="sec-2"><span class="section-number-2">2</span> Adding Inputs</h2>
-<div class="outline-text-2" id="text-2">
-</div>
-<div id="outline-container-sec-2-1" class="outline-3 design">
-<h3 id="sec-2-1">Design time</h3>
-<div class="outline-text-3" id="text-2-1">
+<div id="outline-container-sec-2-3" class="outline-3">
+<h3 id="sec-2-3">Quiz Time</h3>
+<div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
-<li>Our PIC so far is quite limited. While its great that it can flash in patterns (it could signal SOS in <a href="http://en.wikipedia.org/wiki/Morse_code">Morse</a> code), but PICs become more powerful when they can interact with the World around them.
-</li>
-<li>Modify your circuit diagram to add a PTM (Push to Make) switch and 10k resistor, as shown in the screenshot below. Make sure you connect the bottom of the switch to input 3 on the PIC.
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/step_4.png" alt="step_4.png" />
-</p>
-</div>
-<ul class="org-ul">
-<li>If you run your circuit now, you'll see that clicking the button doesn't change the way the program behaves. This is because we've not told the PIC what we'd like to do yet.
-</li>
-<li>Go back to your Flowchart, and add a "Digital" diamond to the top of the program, as shown in the picture below. Double-click the diamond, and set it to check if input 1 is turned on.
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/step_5.png" alt="step_5.png" />
-</p>
-</div>
-<ul class="org-ul">
-<li>Connect the flow lines as shown in the picture above, then go back to your circuit and run it. Click on the switch to see what happens.
-</li>
-<li>Now go back to the flowchart and click play. While the simulation is running, you can click once on the diamond, and simulate pushing button 3 from there.
-</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-sec-2-2" class="outline-3 run">
-<h3 id="sec-2-2">Coding time</h3>
-<div class="outline-text-3" id="text-2-2">
-<ul class="org-ul">
-<li>Modify the program so that pushing the button and holding it down turns on the LED, and releasing it turns it off. Save this as "PIC Torch.cwz"
-</li>
-<li>Change it again, so that when you push and hold the button, it flashes on and off slowly. When the button is released, make it flash quickly.
-</li>
-<li>Add two more LEDs to your circuit diagram, and make a note of which output pin they're connected to. You can change their colour by double-clicking them. Make output 0 red, output 1 amber and output 2 green.
-</li>
-<li>Write a program that makes each of the LEDs come on for 2s at a time while the button is held down. When released, they should all turn off.
-</li>
-<li>This is the <b>Silver badge - Progress ladder, Yellow - With assistance, write a simple program to manipulate outputs.</b> You can turn on multiple LEDs at once. Modify the code so that when the button is pushed, they simulate a set of <a href="http://www.drivingtesttips.biz/traffic-lights-sequence.html">traffic lights</a> (make then change once every 2s). Save this as "PIC-traffic.cwz".
-</li>
-<li>Congratulations! This program (or any of the others you've made) could be put straight onto the circuit you're going to make in your practical sessions.
-</li>
-</ul>
-</div>
-</div>
-</div>
-<div id="outline-container-sec-3" class="outline-2 activity">
-<h2 id="sec-3"><span class="section-number-2">3</span> Digital Vs. Analogue</h2>
-<div class="outline-text-2" id="text-3">
-</div>
-<div id="outline-container-sec-3-1" class="outline-3 design">
-<h3 id="sec-3-1">Design time</h3>
-<div class="outline-text-3" id="text-3-1">
-<ul class="org-ul">
-<li>We've nearly covered all the theory we'll need for this project. The last stage is to add the type of intput your project will use.
-</li>
-<li>Some input components are digital. This means that they can only be either 'on' or 'off', like switches or buttons.
-</li>
-<li>Some input components are analogue. This means they can have a range of different values, like a <a href="http://en.wikipedia.org/wiki/Photoresistor">LDR</a> or <a href="http://en.wikipedia.org/wiki/Thermistor">thermistor</a>.
-</li>
-<li>LDRs work because their resistance increases as it gets darker, and when connected to an analogue input on a PIC chip, this can be read as a number between 0 (very dark) and 255 (extremely bright).
-</li>
-<li>Modify your circuit diagram, by swapping the PTM switch for an LDR (found in the Sensors section of Input Components in Circuit Wizard).
-</li>
-<li><span class="underline"><b>NOTE:</b></span> The LDR is connected to input 6. This is because an LDR is an analogue component, so needs to be connected to an input that can accept it (notice the /A after G1 in the picture below). 
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/step_6.png" alt="step_6.png" />
-</p>
-</div>
-<ul class="org-ul">
-<li>Your circuit should now look something like the picture above.
-</li>
-<li>Lets look at the results of this work. Click the 'play' button to run the circuit, then click the text saying, 'View the analogue sensor readings' which can be seen on the far right-hand side of the circuit wizard window, about half-way down the screen.
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/step_7.png" alt="step_7.png" />
-</p>
-</div>
-<ul class="org-ul">
-<li>Your screen should look the same as shown above. If you now click once on the LDR symbol on the circuit diagram, you can simulate a change in light level by dragging 
-</li>
-<li>We can now be a little more flexible about how our programs work. With a digital switch, we're no longer limited to "is it on?". We could program our chip to work as a light meter, for instance. 
-</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-sec-3-2" class="outline-3 save">
-<h3 id="sec-3-2">Save It</h3>
-<div class="outline-text-3" id="text-3-2">
-<p>
-Save your work as "Analogue PIC.cwz".
-</p>
-</div>
-</div>
-<div id="outline-container-sec-3-3" class="outline-3 run">
-<h3 id="sec-3-3">Code It</h3>
-<div class="outline-text-3" id="text-3-3">
-<ul class="org-ul">
-<li>Using the analogue diamond shape in Circuit Wizard, create the following program&#x2026;
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="img/step_12.png" alt="step_12.png" />
-</p>
-</div>
-<ul class="org-ul">
-<li>Note the values I used on the decision diamonds.
-</li>
-<li>Make sure with your output parallelograms that you turn off any outputs that aren't being turned on. For instance, in the bottom-left shape, I turned output 0 on, and also turned off outputs 1 and 2. 
-</li>
-<li>Test your program when finished, and see how changing the light level affects how many LEDs are turned on.
-</li>
-<li>This is the <b>Gold Badge - Progress ladder, Green - With assistance, write programs to handle inputs in a PIC circuit.</b>
-</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-sec-3-4" class="outline-3 try">
-<h3 id="sec-3-4">Try It</h3>
-<div class="outline-text-3" id="text-3-4">
-<ul class="org-ul">
-<li>Try adding another decision box to turn all 3 LEDs on when the light level is even higher. 
-</li>
-<li>Try adding another decision box (and adjusting the others), so that all the LEDs are off when its dark, then one, two or 3 come up as it gets brighter.
-</li>
-<li>Then change it again so that when its really bright, all 3 LEDS flash on and off repeatedly. 
-</li>
-<li>Save your best program as, "my analogue program.cwz". 
-</li>
-</ul>
-</div>
-</div>
-</div>
-
-<div id="outline-container-sec-4" class="outline-2 activity">
-<h2 id="sec-4"><span class="section-number-2">4</span> Badge It Platinum</h2>
-<div class="outline-text-2" id="text-4">
-</div>
-<div id="outline-container-sec-4-1" class="outline-3 design">
-<h3 id="sec-4-1">Assessment Task</h3>
-<div class="outline-text-3" id="text-4-1">
-<p>
-Create a text document and answer the following questions:
-</p>
-<ul class="org-ul">
-<li><b>Progress ladder Blue - Independently discuss PIC circuits and how they handle both digital and analogue data.</b>
-</li>
-<li>What are the advantages of using PIC chips over traditional circuit design?
-</li>
-<li>Giving examples, explain the difference between analogue and digital input components.
-</li>
-<li>In programming, what is meant by the term, "loop"? Why is is often advantageous to have programs use these, rather than running through their code from top to bottom?
-</li>
-<li>Write down the purpose of each pin on a Genie C08. E.g. Pin 1 - Power, Pin 2 -&#x2026; etc. You can find out most of these by hovering the mouse over the pins in Circuit Wizard, but for some, you'll need to explore the Circuit Wizard help files. 
+<li>Complete the quiz for badge.
 </li>
 </ul>
 <p>
-<a href="index.html">Return to homepage</a>
+&lt;LINK to Quiz1&gt;
 </p>
 </div>
 </div>
