--- a/index.html
+++ b/index.html
@@ -166,38 +166,33 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-5" class="outline-2 activity">
-<h2 id="sec-5"><a href="step_3.html">Lesson 5 - PCB Testing</a></h2>
+<h2 id="sec-5"><a href="step_3.html">Lesson 5 - PCB Testing and Programming</a></h2>
 <div class="outline-text-2" id="text-5">
 </div>
 </div>
 <div id="outline-container-sec-6" class="outline-2 activity">
-<h2 id="sec-6"><a href="step_4.html">Lesson 6 - PC Connection and Testing</a></h2>
+<h2 id="sec-6"><a href="step_5.html">Lesson 6 - PIC Coding Challenges</a></h2>
 <div class="outline-text-2" id="text-6">
 </div>
 </div>
 <div id="outline-container-sec-7" class="outline-2 activity">
-<h2 id="sec-7"><a href="step_5.html">Lesson 7 - PIC Coding Challenges</a></h2>
+<h2 id="sec-7"><a href="step_6.html">Lesson 7 - Housing</a></h2>
 <div class="outline-text-2" id="text-7">
 </div>
 </div>
 <div id="outline-container-sec-8" class="outline-2 activity">
-<h2 id="sec-8"><a href="step_6.html">Lesson 8 - Housing</a></h2>
+<h2 id="sec-8"><a href="evaluation.html">Lesson 8 - Evaluation</a></h2>
 <div class="outline-text-2" id="text-8">
 </div>
 </div>
 <div id="outline-container-sec-9" class="outline-2 activity">
-<h2 id="sec-9"><a href="evaluation.html">Lesson 9 - Evaluation</a></h2>
+<h2 id="sec-9"><a href="assess.html">Assessment</a></h2>
 <div class="outline-text-2" id="text-9">
 </div>
 </div>
 <div id="outline-container-sec-10" class="outline-2 activity">
-<h2 id="sec-10"><a href="assess.html">Assessment</a></h2>
+<h2 id="sec-10"><a href="homework.html">Homework Tasks</a></h2>
 <div class="outline-text-2" id="text-10">
-</div>
-</div>
-<div id="outline-container-sec-11" class="outline-2 activity">
-<h2 id="sec-11"><a href="homework.html">Homework Tasks</a></h2>
-<div class="outline-text-2" id="text-11">
 </div>
 </div>
 </div>
