--- a/step_1.html
+++ b/step_1.html
@@ -216,7 +216,7 @@ for the JavaScript code in this tag.
 <div class="outline-text-3" id="text-1-1">
 <p>
 Peripheral Interface Controllers are small silicon chips which can be programmed to perform useful tasks.
-In school, we tend to use Genie branded chips, like the G08 model you will use in this project. Others (e.g. PICAXE) are available.
+In school, we tend to use Genie branded chips, like the 08 model you will use in this project. Others (e.g. PICAXE) are available.
 PIC chips allow you connect different inputs (e.g. switches) and outputs (e.g. LEDs, motors and speakers), and to control them using flowcharts.
 Chips such as these can be found everywhere in consumer electronic products, from toasters to cars. 
 </p>
@@ -246,7 +246,7 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 <h3 id="sec-2-1">Design time</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>Open up Circuit Wizard, and create the following circuit layout. The Genie G08 chip can be found in the "Microcontrollers" drop-down menu item.
+<li>Open up Circuit Wizard, and create the following circuit layout. The Genie 08 chip can be found in the "Microcontrollers" drop-down menu item.
 </li>
 </ul>
 
