Added new file instructions.

--- a/step_1.html
+++ b/step_1.html
@@ -246,7 +246,22 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 <h3 id="sec-2-1">Design time</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>Open up Circuit Wizard, and create the following circuit layout. The Genie 08 chip can be found in the "Microcontrollers" drop-down menu item.
+<li>Open up Circuit Wizard, and create the following circuit layout. Before you do, you will need to open a new file.
+</li>
+<li>Always select "Circuit With GENIE Flowchart"
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/Circuit_wizard_selection.png" alt="Circuit_wizard_selection.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>The Genie 08 chip can be found in the "Microcontrollers" drop-down menu item.
+</li>
+<li>the battery can be found in the "Power Supplies" drop-down menu (right at the top).
+</li>
+<li>the LED can be found in the "Light Emitting Diodes" drop-down menu, <b>be careful not to choose the "diode" opition.</b>
 </li>
 </ul>
 
@@ -255,6 +270,8 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 </p>
 </div>
 <ul class="org-ul">
+<li>Once complete, create a new folder in your home drive - Design Engineering\Year8\PIC folder. Now save the file as "FirstPIC" in your Design Engineering\Year8\PIC folder.
+</li>
 <li>Whether its an LED or a PIC chips, the first thing that electronic components need is power, and a connection to ground. Circuit Wizard simplifies this for us by showing each of the 8 legs of the PIC (known as pins) in a different order to how they really are. This makes drawing the initial circuit easier. In this case, Power has been drawn by itself at the top of the chip, and the ground pin (the negative end of a battery) is at the bottom.
 </li>
 <li>When designing PIC circuits, Inputs are placed to the left of the PIC chip. We're not going to worry about these for now.
@@ -328,7 +345,9 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 </li>
 <li>Modify your program so that the LED comes on for 3s ONCE, then blinks steadily on and off once a second until the program is stopped.
 </li>
-<li>Save your file as FirstPIC.cwz in your Design Engineering\Year8\PIC folder, then save it again straight away as SecondPic.cwz, so that you can make the next set of changes and still have a backup.
+<li>Save your text file as "First Badge" in your Design Engineering\Year8\PIC folder.
+</li>
+<li>Now go back and save the original Circuit Wizard file as SecondPic.cwz, so that you can make the next set of changes and still have a backup.
 </li>
 </ul>
 </div>
@@ -339,6 +358,8 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>Complete the quiz for badge.
+</li>
+<li>You need to also upload screenshots of your text files.
 </li>
 </ul>
 <p>
