--- a/step_1.html
+++ b/step_1.html
@@ -291,7 +291,7 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 </p>
 </div>
 <ul class="org-ul">
-<li>Try and run the circuit. You'll see an error message, and the screen will change to show you a green flowchart symbol with the word, "Start" in it. This is because the PIC chip needs you to give it instructions as to what you'd like it to do. Using shapes located on the right-hand side of the screen and experimenting with clicking near the shapes you've drawn, create the following flowchart. We're going to make the LED blink on and off.
+<li>Try and run the circuit <b>(Click on the 'play' button)</b>. You'll see an error message, and the screen will change to show you a green flowchart symbol with the word, "Start" in it. This is because the PIC chip needs you to give it instructions as to what you'd like it to do. Using shapes located on the right-hand side of the screen and experimenting with clicking near the shapes you've drawn, create the following flowchart. We're going to make the LED blink on and off.
 </li>
 </ul>
 
@@ -335,19 +335,21 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 <h3 id="sec-2-2">Coding time</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
-<li>Try and modify your program and answer the questions below on a text document (.txt). You'll be saving this circuit in your home drive later.
+<li>Open a .doc (Word document). You will screenshot all the steps here and answer the questions.
 </li>
-<li>Make the LED blink on and off twice as quickly.
+<li>Try and modify your program. You'll be saving this circuit in your home drive later.
 </li>
-<li>Why are there two wait shapes, and not just one?
+<li>Make the LED blink on and off twice as quickly. Now screenshot the flowchart and paste it into the Word document.
 </li>
-<li>Modify your program, so that it comes on for 2s, off for 1s, on for 1s and off for 2s before repeating.
+<li>Why are there two wait shapes, and not just one? Answer this question in the Word document.
 </li>
-<li>Modify your program so that the LED comes on for 3s ONCE, then blinks steadily on and off once a second until the program is stopped.
+<li>Modify your program, so that it comes on for 2s, off for 1s, on for 1s and off for 2s before repeating. Now screenshot the flowchart and paste it into the Word document.
+</li>
+<li>Modify your program so that the LED comes on for 3s ONCE, then blinks steadily on and off once a second until the program is stopped. Now screenshot the flowchart and paste it into the Word document
 </li>
 <li>Save your text file as "First Badge" in your Design Engineering\Year8\PIC folder.
 </li>
-<li>Now go back and save the original Circuit Wizard file as SecondPic.cwz, so that you can make the next set of changes and still have a backup.
+<li>Now go back and save the original Circuit Wizard file as "SecondPic", so that you can make the next set of changes and still have a backup.
 </li>
 </ul>
 </div>
