--- a/step_1B.html
+++ b/step_1B.html
@@ -189,7 +189,7 @@ for the JavaScript code in this tag.
 </ul>
 
 <div class="figure">
-<p><img src="img/step_6.png" alt="step_6.png" />
+<p><img src="img/Step_6A.png" alt="Step_6A.png" />
 </p>
 </div>
 <ul class="org-ul">
@@ -200,7 +200,7 @@ for the JavaScript code in this tag.
 </ul>
 
 <div class="figure">
-<p><img src="img/step_7.png" alt="step_7.png" />
+<p><img src="img/step_7A.png" alt="step_7A.png" />
 </p>
 </div>
 <ul class="org-ul">
