--- a/step_1A.html
+++ b/step_1A.html
@@ -174,7 +174,7 @@ for the JavaScript code in this tag.
 </ul>
 
 <div class="figure">
-<p><img src="img/step_4.png" alt="step_4.png" />
+<p><img src="img/Step_4A.png" alt="Step_4A.png" />
 </p>
 </div>
 <ul class="org-ul">
