--- a/step_1B.html
+++ b/step_1B.html
@@ -186,6 +186,8 @@ for the JavaScript code in this tag.
 </li>
 <li><span class="underline"><b>NOTE:</b></span> The LDR is connected to input 6. This is because an LDR is an analogue component, so needs to be connected to an input that can accept it (notice the /A after G1 in the picture below). 
 </li>
+<li><b>You will find the LDR in Circuit Wizard under the 'Sensors' option in the drop box.</b>
+</li>
 </ul>
 
 <div class="figure">
