Updated quiz links

--- a/step_1.html
+++ b/step_1.html
@@ -361,12 +361,11 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 <ul class="org-ul">
 <li>Complete the quiz for badge.
 </li>
+<li>Click on <a href="https://www.bournetolearn.com/quizzes/y8-piclicence/Lesson_1/index.php">this</a> link to complete the quiz.
+</li>
 <li>You need to also upload screenshots of your text files.
 </li>
 </ul>
-<p>
-&lt;LINK to Quiz1&gt;
-</p>
 </div>
 </div>
 </div>
