--- a/step_1A.html
+++ b/step_1A.html
@@ -222,12 +222,10 @@ for the JavaScript code in this tag.
 <ul class="org-ul">
 <li>Complete the quiz for the gold and silver badges
 </li>
-</ul>
-<p>
-&lt;LINK QUIZ 2&gt;
-</p>
-
-<ul class="org-ul">
+<li>Click on <a href="https://www.bournetolearn.com/quizzes/y8-piclicence/Lesson_2/index.php">this</a> link to complete the quiz.
+</li>
+<li>Make sure you screenshot and upload your work along with the quiz.
+</li>
 <li>Complete the Traffic Light simulation and hand in for the platinum badge.
 </li>
 </ul>
