--- a/step_1B.html
+++ b/step_1B.html
@@ -269,14 +269,14 @@ Save your work as "Analogue PIC.cwz".
 <div id="outline-container-sec-2-1" class="outline-3 design">
 <h3 id="sec-2-1">Silver and Gold Badges</h3>
 <div class="outline-text-3" id="text-2-1">
-
 <ul class="org-ul">
 <li>Complete the quiz
 </li>
+<li>Click on <a href="https://www.bournetolearn.com/quizzes/y8-piclicence/Lesson_3/index.php">this</a> link to complete the badge task.
+</li>
+<li>Please also upload screenshots of your work.
+</li>
 </ul>
-<p>
-&lt;LINK TO QUIZ 3&gt;
-</p>
 </div>
 </div>
 <div id="outline-container-sec-2-2" class="outline-3 design">
