Added video auto trace

--- a/step_6.html
+++ b/step_6.html
@@ -189,6 +189,8 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TL_dkhFncUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/mGqCqDuxBXg" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 </div>
 </div>
