--- a/step_6.html
+++ b/step_6.html
@@ -147,7 +147,9 @@ for the JavaScript code in this tag.
 <li><a href="#sec-1-1">Part 1</a></li>
 <li><a href="#sec-1-2">Part 2</a></li>
 <li><a href="#sec-1-3">Autotrace</a></li>
-<li><a href="#sec-1-4">Badge It</a></li>
+<li><a href="#sec-1-4">Contour</a></li>
+<li><a href="#sec-1-5">Making holes</a></li>
+<li><a href="#sec-1-6">Badge It</a></li>
 </ul>
 </li>
 </ul>
@@ -219,8 +221,32 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-1-4" class="outline-3 badge">
-<h3 id="sec-1-4">Badge It</h3>
+<h3 id="sec-1-4">Contour</h3>
 <div class="outline-text-3" id="text-1-4">
+<ul class="org-ul">
+<li>This is a video from the year 7 Mechanisms project.
+</li>
+<li>You can click on <a href="https://bournetoinvent.com/projects/7-SC-Mechanisms/pages/7_Lesson.html">this</a> link to go back and read it again.
+</li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/v1xIDcnJOpA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</div>
+
+<div id="outline-container-sec-1-5" class="outline-3 badge">
+<h3 id="sec-1-5">Making holes</h3>
+<div class="outline-text-3" id="text-1-5">
+<ul class="org-ul">
+<li><b>The holes need to be 6.8mm in diameter (3.4mm radius).</b>
+</li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-qGKmhh3V3c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</div>
+
+<div id="outline-container-sec-1-6" class="outline-3 badge">
+<h3 id="sec-1-6">Badge It</h3>
+<div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li>Silver - Progress ladder, Yellow - Use a CAD package to draw shapes accurately to specified dimensions.
 </li>
