Added power supply images

--- a/step_3.html
+++ b/step_3.html
@@ -191,6 +191,55 @@ By this point, you should have a fully soldered together PCB (with a chip), a do
 <h3 id="sec-1-1">Hardware Test</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
+<li>In order to connect the microcontroller to the computer, you will need a power supply and a download cable.
+</li>
+<li>Below is a picture of the power supply and how to connect it.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/Power_supply.JPG" alt="Power_supply.JPG" />
+</p>
+</div>
+<ul class="org-ul">
+<li>First, make sure the switch on the back in on.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/Power_switch.JPG" alt="Power_switch.JPG" />
+</p>
+</div>
+<ul class="org-ul">
+<li>Second, Make sure the voltage is set to 9V.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/9V_selection.JPG" alt="9V_selection.JPG" />
+</p>
+</div>
+<ul class="org-ul">
+<li>Third, Connect the power supply to the battery snap, using the crocodile clips from the power supply.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/Crocodile_clips.JPG" alt="Crocodile_clips.JPG" />
+</p>
+</div>
+<ul class="org-ul">
+<li>Below is what it should look like with only the USB needing to be connected to the computer. The 3.5mm stereo jack is already connected in the picture to the PCB.
+</li>
+<li>The is a plug behind each computer monitor to plug in the power supply.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/All_connected.JPG" alt="All_connected.JPG" />
+</p>
+</div>
+<ul class="org-ul">
 <li>When a PIC chip initially boots (starts) up, it briefly pulses output 0, which we happen to have an LED connected to.
 </li>
 <li>Connect the 0V (negative) pin of your power connector to the PCB, then connect the positive power pin to the PCB while looking at the LEDs on the board.
