--- a/Homework.html
+++ b/Homework.html
@@ -156,7 +156,7 @@ for the JavaScript code in this tag.
 <a href="https://github.com/stcd11/pic_programmer">Fork me on GitHub</a>
 </div>
 <center>
-<img src='img/sboard.jpg' width=33%>
+<img src='img/soldered.jpg' width=33%>
 </center>
 
 <div id="outline-container-sec-1" class="outline-2 activity">
